--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "functions": {
+    "app/api/widget/route.ts": {
+      "maxDuration": 60
+    }
+  }
 }
