--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "autoprefixer": "^10.4.21",
     "dom-to-image-more": "^3.7.1",
     "html2canvas": "^1.4.1",
-    "next": "15.5.9",
+    "next": "^15.5.12",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
